Added changes as per review comments